--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-    "name": "electron-quick-start",
+    "name": "siderus-wire-client",
     "version": "1.0.0",
-    "description": "A minimal Electron application",
+    "description": "IPFS client",
     "main": "main.js",
     "scripts": {
         "start": "electron .",
         "build": "mkdir -p ./builds/ ; cd ./builds/ ; electron-packager .. siderus.wire.client",
         "build-all": "mkdir -p ./builds/ ; cd ./builds/ ; electron-packager .. siderus.wire.client --all"
     },
-    "repository": "https://github.com/electron/electron-quick-start",
+    "repository": "",
     "keywords": [
-        "Electron",
-        "quick",
-        "start",
-        "tutorial",
-        "demo"
+        "electron",
+        "ipfs",
+        "file",
+        "p2p",
+        "upload"
     ],
     "author": "GitHub",
     "license": "CC0-1.0",
     "devDependencies": {
         "electron": "^1.4.1",
         "electron-packager": "^8.5.0"
+    },
+    "dependencies": {
+        "photon": "git+https://github.com/connors/photon.git"
     }
 }
