--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   },
   "dependencies": {
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
-    "photon": "git+https://github.com/connors/photon.git"
+    "nedb": "^1.8.0",
+    "photon": "git+https://github.com/connors/photon.git",
+    "q-sqlite3": "^0.1.3",
+    "sqlite3": "^3.1.8"
   }
 }
