--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
     "q-sqlite3": "^0.1.3",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "underscore": "^1.8.3"
   }
 }
