--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "author": "Lorenzo Setale",
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
     "electron": "^1.4.1",
     "electron-packager": "^8.5.0",
     "electron-prebuilt-compile": "^1.4.15",
@@ -28,6 +32,8 @@
     "byte-size": "^3.0.0",
     "eslint-plugin-react": "^6.9.0",
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
+    "mobx": "^3.0.2",
+    "mobx-react": "^4.1.0",
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
     "q-sqlite3": "^0.1.3",
