--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "byte-size": "^3.0.0",
     "eslint-plugin-react": "^6.9.0",
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
+    "is-ipfs": "^0.3.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "nedb": "^1.8.0",
