--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "byte-size": "^3.0.0",
     "electron": "^1.6.0",
     "electron-compile": "^5.1.3",
     "electron-compilers": "^5.4.0",
-    "byte-size": "^3.0.0",
+    "electron-settings": "^2.2.2",
     "eslint-plugin-react": "^6.9.0",
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
     "is-ipfs": "^0.3.0",
