--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "electron-settings": "^2.2.2",
     "eslint-plugin-react": "^6.9.0",
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
+    "is-electron-renderer": "^2.0.1",
     "is-ipfs": "^0.3.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
