--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build-dev": "electron-packager . Lumpy --overwrite --out=./build",
     "build-icons": "icon-gen -i logo.svg -o ./build/ -m ico,icns,png",
     "build-darwin": "electron-packager . Lumpy --overwrite --icon=./build/app.icns --out=./build",
-    "build": "npm run build-icons ; npm run build-darwin"
+    "build": "npm run build-icons ; npm run build-darwin",
+    "test": "xo"
   },
   "repository": "https://github.com/koalalorenzo/Lumpy",
   "keywords": [
@@ -23,7 +24,10 @@
   "devDependencies": {
     "electron-packager": "^8.5.1",
     "eslint": "^3.14.0",
-    "icon-gen": "^1.0.7"
+    "eslint-config-equimper": "^1.3.5",
+    "eslint-plugin-react": "^6.9.0",
+    "icon-gen": "^1.0.7",
+    "xo": "^0.17.1"
   },
   "dependencies": {
     "babel-cli": "^6.22.2",
@@ -49,5 +53,11 @@
     "react-dom": "^15.4.2",
     "react-photonkit": "git+https://github.com/react-photonkit/react-photonkit.git",
     "underscore": "^1.8.3"
+  },
+  "xo": {
+    "esnext": true,
+    "semicolon": false,
+    "space": 2,
+    "plugins": ["react"]
   }
 }
