--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint": "^3.14.0",
     "eslint-config-equimper": "^1.3.5",
     "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-promise": "^3.4.2",
+    "eslint-plugin-standard": "^2.0.1",
     "icon-gen": "^1.0.7",
     "standard": "^8.6.0"
   },
@@ -38,7 +40,6 @@
     "electron-compile": "^5.1.3",
     "electron-compilers": "^5.4.0",
     "electron-settings": "^2.2.2",
-    "eslint-plugin-react": "^6.9.0",
     "ipfs-api": "git+https://github.com/ipfs/js-ipfs-api.git",
     "is-electron-renderer": "^2.0.1",
     "is-ipfs": "^0.3.0",
