--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
     "byte-size": "^3.0.0",
+    "classnames": "^2.2.5",
     "electron": "^1.6.0",
     "electron-compile": "^5.1.3",
     "electron-compilers": "^5.4.0",
@@ -51,6 +52,7 @@
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
     "q-sqlite3": "^0.1.3",
+    "query-string": "^5.1.0",
     "react": "^15.4.2",
     "react-desktop": "^0.2.17",
     "react-dom": "^15.4.2",
