--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-desktop": "^0.2.17",
     "react-dom": "^15.4.2",
     "react-photonkit": "git+https://github.com/react-photonkit/react-photonkit.git",
+    "styled-components": "^3.1.6",
     "underscore": "^1.8.3"
   }
 }
