points to github instead of gitlab

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-darwin": "electron-packager . Lumpy --overwrite --icon=./build/app.icns --out=./build",
     "build": "yarn build-icons ; yarn build-darwin"
   },
-  "repository": "https://gitlab.com/siderus/Lumpy",
+  "repository": "https://github.com/siderus/Lumpy",
   "keywords": [
     "electron",
     "ipfs",
