disables email notification

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,15 @@
 language: node_js
 node_js:
   - "node"
-
 cache:
   yarn: true
-
 matrix:
   include:
   - os: linux
   - os: osx
+
+notifications:
+  email: false
 
 script:
   - yarn test --coverage
