--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "is-ipfs": "^0.3.0",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
+    "multiaddr": "^3.0.2",
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
     "q-sqlite3": "^0.1.3",
