--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "react-desktop": "^0.2.17",
     "react-dom": "^15.4.2",
     "react-photonkit": "git+https://github.com/react-photonkit/react-photonkit.git",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "styled-components": "^3.1.6",
     "underscore": "^1.8.3"
   }
