--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "multiaddr": "^3.0.2",
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
+    "promised-exec": "^1.0.1",
     "q-sqlite3": "^0.1.3",
     "query-string": "^5.1.0",
     "react": "^15.4.2",
