44 Add LoadingWindow when starting the app

--- a/.babelrc
+++ b/.babelrc
@@ -5,6 +5,7 @@
     "react"
   ],
   "plugins": [
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    "inline-react-svg"
   ]
 }
