--- a/.compilerc
+++ b/.compilerc
@@ -6,7 +6,8 @@
       "react"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      "transform-decorators-legacy",
+      "inline-react-svg"
     ]
   }
 }
