--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Lorenzo Setale",
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-plugin-inline-react-svg": "^0.5.2",
     "electron-forge": "^5.1.1",
     "electron-prebuilt-compile": "1.8.3",
     "electron-react-devtools": "^0.5.3",
