--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "electron-forge": "^5.1.1",
     "electron-prebuilt-compile": "1.8.3",
     "electron-react-devtools": "^0.5.3",
-    "eslint": "^3.14.0",
-    "eslint-config-equimper": "^1.3.5",
-    "eslint-plugin-promise": "^3.4.2",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
     "icon-gen": "^1.0.7",
-    "jest": "^22.4.2",
-    "standard": "^8.6.0"
+    "jest": "^22.4.2"
   },
   "dependencies": {
     "babel-cli": "^6.22.2",
