--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "Lorenzo Setale",
   "license": "GPL-3.0",
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "babel-plugin-inline-react-svg": "^0.5.2",
     "electron-forge": "^5.1.1",
     "electron-prebuilt-compile": "1.8.3",
