--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "nedb": "^1.8.0",
     "photon": "git+https://github.com/connors/photon.git",
     "promised-exec": "^1.0.1",
-    "q-sqlite3": "^0.1.3",
     "query-string": "^5.1.0",
     "react": "^15.4.2",
     "react-desktop": "^0.2.17",
@@ -87,7 +86,8 @@
     },
     "linux": {
       "target": [
-        "deb", "rpm"
+        "deb",
+        "rpm"
       ]
     },
     "mac": {
