--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,51 @@ node_js:
   - "node"
 cache:
   yarn: true
+
 matrix:
   include:
   - os: linux
+    services: docker
+    language: generic
   - os: osx
+    osx_image: xcode9.2
+    language: node_js
+    node_js: "9"
+    env:
+      - ELECTRON_CACHE=$HOME/.cache/electron
+      - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
 
 notifications:
   email: false
 
-script:
-  - yarn test --coverage
-  - yarn lint
+# From: https://www.electron.build/multi-platform-build
+# example: https://github.com/develar/onshape-desktop-shell/blob/master/.travis.yml
+jobs:
+  include:
+    - stage: test
+      script:
+        - yarn test --coverage
+        - yarn lint
+    - stage: deploy
+      script:
+        - |
+          if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+            docker run --rm \
+              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+              -v ${PWD}:/project \
+              -v ~/.cache/electron:/root/.cache/electron \
+              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+              electronuserland/builder:wine \
+              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+          else
+            yarn release
+          fi
 
-before_deploy:
-  - yarn make
+cache:
+  directories:
+  - node_modules
+  - $HOME/.cache/electron
+  - $HOME/.cache/electron-builder
 
-deploy:
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file: out/make/*
-  skip_cleanup: true
-  on:
-    tags: true
+before_cache:
+  - rm -rf $HOME/.cache/electron-builder/wine
