changes the author

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "upload"
   ],
   "author": {
-    "name": "Lorenzo Setale",
-    "email": "lorenzo.setale@siderus.io"
+    "name": "Siderus OU",
+    "email": "hello@siderus.io"
   },
   "license": "GPL-3.0",
   "devDependencies": {
