speed up the building process by using the pre-built icons

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "jest",
     "lint": "eslint app/ --ext .jsx --ext .js",
     "start": "electron .",
-    "build-icons": "icon-gen -i ./docs/logo.svg -o ./docs/ -m ico,icns -n ico=logo,icns=logo; cp ./docs/logo.icns ./out/ ; cp ./docs/logo.ico ./out/",
-    "prepackage": "mkdir out; yarn build-icons; NODE_ENV=production electron-compile app",
+    "build-icons": "icon-gen -i ./docs/logo.svg -o ./docs/ -m ico,icns -n ico=logo,icns=logo",
+    "prepackage": "mkdir out; cp ./docs/logo.icns ./out/ ; cp ./docs/logo.ico ./out/ ; NODE_ENV=production electron-compile app",
     "package": "yarn prepackage && build --dir",
     "make": "yarn prepackage && build",
     "make-all": "yarn prepackage && build -mwl",
