--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ jobs:
               -v ~/.cache/electron:/root/.cache/electron \
               -v ~/.cache/electron-builder:/root/.cache/electron-builder \
               electronuserland/builder:wine \
-              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release --linux --win"
+              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release-all"
           else
-            yarn release
+            yarn release-all
           fi
 
 cache:
