--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "babel-eslint": "^8.2.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-inline-react-svg": "^0.5.2",
     "electron-builder": "^20.8.1",
     "electron-prebuilt-compile": "1.8.3",
