restores babel presets

--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "babel-eslint": "^8.2.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.22.0",
     "electron-builder": "^20.8.1",
     "electron-prebuilt-compile": "1.8.3",
     "electron-react-devtools": "^0.5.3",
