--- a/.travis.yml
+++ b/.travis.yml
@@ -5,44 +5,26 @@ notifications:
 
 # From: https://www.electron.build/multi-platform-build
 # example: https://github.com/develar/onshape-desktop-shell/blob/master/.travis.yml
-jobs:
-  include:
-    - stage: test
-      script:
-        - yarn test --coverage
-        - yarn lint
-      os: linux
-      language: node_js
-    - stage: release
-      on:
-        tags: true
-        all_branches: true
-      matrix:
-        include:
-        - os: linux
-          services: docker
-          language: generic
-        - os: osx
-          osx_image: xcode9.2
-          language: node_js
-          node_js: "9"
-          env:
-            - ELECTRON_CACHE=$HOME/.cache/electron
-            - ELECTRON_BUILDER_CACHE=$HOME/.cache/electron-builder
-      script:
-        - yarn
-        - |
-          if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-            docker run --rm \
-              --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
-              -v ${PWD}:/project \
-              -v ~/.cache/electron:/root/.cache/electron \
-              -v ~/.cache/electron-builder:/root/.cache/electron-builder \
-              electronuserland/builder:wine \
-              /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release-all"
-          else
-            yarn release-all
-          fi
+stages:
+  - stage: test
+    script:
+      - yarn test --coverage
+      - yarn lint
+    os: linux
+    language: node_js
+  - stage: release
+    if: branch = master
+    os: linux
+    services: docker
+    language: generic
+    script:
+      - docker run --rm \
+          --env-file <(env | grep -iE 'DEBUG|NODE_|ELECTRON_|YARN_|NPM_|CI|CIRCLE|TRAVIS|APPVEYOR_|CSC_|_TOKEN|_KEY|AWS_|STRIP|BUILD_') \
+          -v ${PWD}:/project \
+          -v ~/.cache/electron:/root/.cache/electron \
+          -v ~/.cache/electron-builder:/root/.cache/electron-builder \
+          electronuserland/builder:wine \
+          /bin/bash -c "yarn --link-duplicates --pure-lockfile && yarn release-all"
 
 cache:
   yarn: true
