--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "styled-components": "^3.1.6",
+    "tmp": "^0.0.33",
     "underscore": "^1.8.3"
   },
   "build": {
