--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-photonkit": "git+https://github.com/react-photonkit/react-photonkit.git",
+    "react-spin": "^0.6.2",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "styled-components": "^3.1.6",
