--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ yarn-test:
   tags:
     - docker
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test -e NODE_ENV=production"
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test"
   only:
     - master
 
