--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "spin.js": "^2.3.2",
     "styled-components": "^3.1.6",
     "tmp": "^0.0.33",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "app-root-dir": "^1.0.2"
   },
   "build": {
     "appId": "io.siderus.orion",
