--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "Orion",
   "version": "0.2.2",
+  "env": "development",
   "ipfsVersion": "v0.4.14",
   "description": "Orion is an easy-to-use and KISS IPFS desktop interface",
   "main": "app/entry.js",
