--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ipfs-api": "^20.2.1",
     "is-electron-renderer": "^2.0.1",
     "is-ipfs": "^0.3.0",
+    "mixpanel": "^0.9.1",
     "mobx": "^3.0.2",
     "mobx-react": "^4.1.0",
     "multiaddr": "^3.0.2",
