--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "spin.js": "^2.3.2",
     "styled-components": "^3.1.6",
     "tmp": "^0.0.33",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "uuid": "^3.2.1"
   },
   "build": {
     "appId": "io.siderus.orion",
