--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "electron-builder": "^20.8.1",
-    "electron-prebuilt-compile": "1.8.3",
+    "electron-prebuilt-compile": "^2.0.2",
     "electron-react-devtools": "^0.5.3",
     "eslint": "^4.19.0",
     "eslint-config-standard": "^11.0.0",
