--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,8 +17,6 @@ before_script:
 
 yarn-test:
   stage: test
-  tags:
-    - docker
   script:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test"
   only:
@@ -26,9 +24,7 @@ yarn-test:
 
 yarn-release:
   stage: release
-  when: manual
-  tags:
-    - docker
+  retry: 2
   script:
     - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
   only:
