--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "styled-components": "^3.1.6",
     "tmp": "^0.0.33",
     "underscore": "^1.8.3",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "winreg": "^1.2.4"
   },
   "jest": {
     "testURL": "http://localhost/"
