--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,14 +16,26 @@ before_script:
   - cat package.json.old | jq 'to_entries | map(if .key == "statsToken" then .value = "bcd802fa2e699f85cc19e1ff6079e3c7" else . end) | from_entries' > package.json
   - rm -f package.json.old
 
-yarn-test:
+yarn:test:
   stage: test
   script:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test"
   only:
     - master
 
-yarn-release:
+yarn:release:build:
+  stage: release
+  retry: 2
+  script:
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build_all"
+  artifacts:
+    paths:
+    - build
+    expire_in: 1 week
+  only:
+    - release/*
+
+yarn:release:publish:
   stage: release
   retry: 2
   script:
