--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ yarn:test:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test"
   only:
     - master
+    - /release.*/
 
 yarn:release:build:
   stage: release
