--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,17 +24,42 @@ yarn:test:
     - master
     - /release.*/
 
-yarn:release:build:
+yarn:pre-release:build:mac:
   stage: release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build_all"
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Darwin -e UNAME_S=Darwin"
   artifacts:
     paths:
     - build
     expire_in: 1 week
   only:
     - /release.*/
+
+yarn:pre-release:build:win:
+  stage: release
+  retry: 2
+  script:
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Windows_NT"
+  artifacts:
+    paths:
+    - build
+    expire_in: 1 week
+  only:
+    - /release.*/
+
+yarn:pre-release:build:gnu:
+  stage: release
+  retry: 2
+  script:
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Linux -e UNAME_S=Linux"
+  artifacts:
+    paths:
+    - build
+    expire_in: 1 week
+  only:
+    - /release.*/
+
 
 yarn:release:publish:
   stage: release
