--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ before_script:
   - cat package.json.old | jq 'to_entries | map(if .key == "statsToken" then .value = "bcd802fa2e699f85cc19e1ff6079e3c7" else . end) | from_entries' > package.json
   - rm -f package.json.old
 
+
 yarn:test:
   stage: test
   script:
@@ -24,6 +25,7 @@ yarn:test:
   only:
     - master
     - /release.*/
+
 
 yarn:build:mac:
   stage: pre-release
@@ -62,13 +64,30 @@ yarn:build:gnu:
     - /release.*/
 
 
-yarn:publish:
+yarn:release:mac:
   stage: release
   retry: 2
   script:
-    - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Darwin -e UNAME_S=Darwin"
   only:
-    - master
+    - /release.*/
+
+yarn:release:win:
+  stage: release
+  retry: 2
+  script:
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Windows_NT"
+  only:
+    - /release.*/
+
+yarn:release:gnu:
+  stage: release
+  retry: 2
+  script:
+    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Linux -e UNAME_S=Linux"
+  only:
+    - /release.*/
+
 
 trigger_repository:
   stage: post-release
