--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ yarn:release:mac:
   script:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Darwin -e UNAME_S=Darwin"
   only:
-    - /release.*/
+    - master
 
 yarn:release:win:
   stage: release
@@ -78,7 +78,7 @@ yarn:release:win:
   script:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Windows_NT"
   only:
-    - /release.*/
+    - master
 
 yarn:release:gnu:
   stage: release
@@ -86,7 +86,7 @@ yarn:release:gnu:
   script:
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Linux -e UNAME_S=Linux"
   only:
-    - /release.*/
+    - master
 
 
 trigger_repository:
