--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ yarn:build:win:
   stage: pre-release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Windows_NT"
+    -  
   artifacts:
     paths:
     - build
@@ -65,41 +65,17 @@ yarn:build:gnu:
     - /release.*/
 
 
-yarn:release:mac:
+yarn:release:all:
   stage: release
   retry: 2
   script:
-    - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Darwin -e UNAME_S=Darwin"
+    - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
   artifacts:
     paths:
     - build
     expire_in: 3 months
   only:
-    - tags
-
-yarn:release:win:
-  stage: release
-  retry: 2
-  script:
-    - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Windows_NT"
-  artifacts:
-    paths:
-    - build
-    expire_in: 3 months
-  only:
-    - tags
-
-yarn:release:gnu:
-  stage: release
-  retry: 2
-  script:
-    - docker run --rm -e GH_TOKEN="${GH_TOKEN}" -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release -e OS=Linux -e UNAME_S=Linux"
-  artifacts:
-    paths:
-    - build
-    expire_in: 3 months
-  only:
-    - tags
+    - master
 
 
 trigger_repository:
