--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,18 +60,6 @@ yarn:release:master:
   stage: release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
-  artifacts:
-    paths:
-    - build
-    expire_in: 1 week
-  only:
-    - master
-
-yarn:release:tag:
-  stage: release
-  retry: 2
-  script:
     - make prepare_release
     - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
   artifacts:
@@ -79,10 +67,10 @@ yarn:release:tag:
     - build
     expire_in: 3 months
   only:
-    - tag
+    - master
 
 
-trigger_repository:
+trigger_upload:
   stage: post-release
   script:
     - curl -X POST -F token=${TRIGGER_REPO_TOKEN} -F ref=master https://gitlab.com/api/v4/projects/7744513/trigger/pipeline
