--- a/package.json
+++ b/package.json
@@ -83,10 +83,13 @@
     "testURL": "http://localhost/"
   },
   "build": {
-    "publish": [{
-      "provider": "generic",
-      "url": "https://get.siderus.io/orion"
-    }],
+    "electronVersion": "2.0.8",
+    "publish": [
+      {
+        "provider": "generic",
+        "url": "https://get.siderus.io/orion"
+      }
+    ],
     "appId": "io.siderus.orion",
     "files": [
       "app/**/*",
