adds snap package

--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
       "target": [
         "deb",
         "rpm",
-        "pacman",
-        "apk"
+        "snap"
       ]
     },
     "mac": {
