--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: registry.gitlab.com/siderus/toolchain
+image: electronuserland/builder:wine
 
 services:
   - docker:dind
@@ -18,14 +18,14 @@ stages:
 yarn:test:
   stage: test
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make lint test"
+    - make lint test
 
 
 yarn:build:mac:
   stage: pre-release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Darwin -e UNAME_S=Darwin"
+    - make build -e OS=Darwin -e UNAME_S=Darwin
   artifacts:
     paths:
     - build
@@ -37,7 +37,7 @@ yarn:build:win:
   stage: pre-release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Windows_NT"
+    - make build -e OS=Windows_NT
   artifacts:
     paths:
     - build
@@ -49,7 +49,7 @@ yarn:build:gnu:
   stage: pre-release
   retry: 2
   script:
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make build -e OS=Linux -e UNAME_S=Linux"
+    - make build -e OS=Linux -e UNAME_S=Linux
   artifacts:
     paths:
     - build
@@ -62,8 +62,7 @@ yarn:release:master:
   stage: release
   retry: 2
   script:
-    - make prepare_release
-    - docker run --rm -v ${PWD}:/project electronuserland/builder:wine /bin/bash -c "make release_all"
+    - make prepare_release release_all snap_publish
   cache: {} # Disable cache
   artifacts:
     paths:
